--- a/dev-util/monodevelop/test_grouping/Makefile
+++ b/dev-util/monodevelop/test_grouping/Makefile
@@ -1,4 +1,4 @@
-DISTFILES := $(shell cat /usr/share/dict/words)
+DISTFILES := aaa aab aba abb baa bab bba bbb
 
 # EOL definition is
 # taken from http://stackoverflow.com/questions/12528637/how-do-i-execute-each-command-in-a-list
@@ -8,7 +8,6 @@ define EOL
 endef
 
 define run_shell_command
-NOK+=.
 EDITED_DISTFILES+=$(shell echo ${1}| \
  sed 's/./\L&/g'| \
  sed 's-b-B-g')
@@ -16,13 +15,9 @@ endef
 
 define split_to_groups
 $(eval _args:=)
-$(foreach obj,$1,$(eval _args+=$(obj))$(if $(word $2,$(_args)),$(call run_shell_command,$(_args))$(EOL)$(eval _args:=)))
-$(if $(_args),$(call run_shell_command,$(_args)))
+$(foreach obj,$1,$(eval _args+=$(obj))$(if $(word $2,$(_args)),$(call $3,$(_args))$(EOL)$(eval _args:=)))
+$(if $(_args),$(call $3,$(_args)))
 endef
-
-NOK:=
-EDITED_DISTFILES:=
-$(eval $(call split_to_groups,$(sort ${DISTFILES}),10000))
 
 .PHONY: default_target
 
@@ -30,7 +25,8 @@ define my_macros
 @echo ${1}
 endef
 
+EDITED_DISTFILES:=
+$(eval $(call split_to_groups,$(sort ${DISTFILES}),3,run_shell_command))
+
 default_target:
-	# comment
-	@echo ${NOK}
 	$(foreach w,$(sort $(EDITED_DISTFILES)),$(call my_macros,${w})${EOL})
