--- a/dev-util/monodevelop/Makefile.am.new
+++ b/dev-util/monodevelop/Makefile.am.new
@@ -7,20 +7,8 @@ EXTRA_DIST += \
 	gtkrc.win32 \
 	gtkrc.win32-dark
 
-EDITED_DISTFILES:=$(eval)
-
-srcdirstrip:=$(shell echo "$(srcdir)" | sed 's/[].[^$$\\*]/\\\\&/g')
-topsrcdirstrip:=$(shell echo "$(top_srcdir)" | sed 's/[].[^$$\\*]/\\\\&/g')
-
-define DISTDIR_REPLACEMENTS
-	EDITED_DISTFILES+=$(shell for file in $1; do echo $$file; done | \
-	  sed -e "s|^${srcdirstrip}/||;t" \
-	      -e "s|^${topsrcdirstrip}/|${top_builddir}/|;t"; )
-endef
-
-TAB:=$(subst Z,$(eval),Z	Z)
-
-DISTDIR_REPLACEMENTS_DETABULATED=$(subst ${TAB},,${DISTDIR_REPLACEMENTS})
+srcdirstrip := $(shell echo "$(srcdir)" | sed 's/[].[^$$\\*]/\\\\&/g')
+topsrcdirstrip := $(shell echo "$(top_srcdir)" | sed 's/[].[^$$\\*]/\\\\&/g')
 
 define EOL
 $(eval)
@@ -33,17 +21,39 @@ $(foreach obj,$1,$(eval _args+=$(obj))$(if $(word $2,$(_args)),$(call $3,$(_args
 $(if $(_args),$(call $3,$(_args)))
 endef
 
-$(eval $(call DISTDIR_PROCESS_IN_GROUPS,$(sort ${DISTFILES}),10,DISTDIR_REPLACEMENTS_DETABULATED))
+########################################################################################################
+# compute list of files and list of directories
+# echo and bash for are necessary to add EOL characters after each element before processing by sed
 
-define DISTDIR_MKDIRS_CMD
-	case "$1" in \
-	  */*) $(MKDIR_P) `echo "$1" | \
-	                   sed '/\//!d;s|^|$(distdir)/|;s,/[^/]*$$,,' | \
-	                   sort -u` ;; \
-	esac;
+define DISTDIR_REPLACEMENTS_CMD
+	for file in $1; do echo $$file; done | \
+	   sed -e "s|^${srcdirstrip}/||;t" \
+	       -e "s|^${topsrcdirstrip}/|${top_builddir}/|;t";
 endef
+DISTDIR_REPLACEMENTS=$(shell $(DISTDIR_REPLACEMENTS_CMD))
 
-DISTDIR_MKDIRS=$(eval $(shell $(DISTDIR_MKDIRS_CMD)))
+EDITED_DISTFILES:=$(sort $(subst ${EOL}, ,$(call DISTDIR_PROCESS_IN_GROUPS,${DISTFILES},10,DISTDIR_REPLACEMENTS)))
+
+define DISTDIR_PROCESSDIRS_CMD
+	for file in $1; do case "$$file" in \
+	  */*) echo $$file | sed '/\//!d;s|^|$(distdir)/|;s,/[^/]*$$,,' ;; \
+	esac; \
+	done
+endef
+DISTDIR_PROCESSDIRS=$(shell ${DISTDIR_PROCESSDIRS_CMD})
+
+DISTDIR_DIRECTORY_LIST:=$(sort $(subst ${EOL}, ,$(call DISTDIR_PROCESS_IN_GROUPS,${EDITED_DISTFILES},10,DISTDIR_PROCESSDIRS)))
+
+########################################################################################################
+# create directories
+
+define DISTDIR_MKDIR_CMD
+	$(MKDIR_P) $1
+endef
+DISTDIR_MKDIR=$(shell ${DISTDIR_MKDIR_CMD})
+
+########################################################################################################
+# copy files
 
 define DISTDIR_COPYING_CMD
 	for file in $1; do \
@@ -65,10 +75,9 @@ define DISTDIR_COPYING_CMD
 	  fi; \
 	done
 endef
-
-DISTDIR_COPYING=$(eval $(shell $(DISTDIR_COPYING_CMD)))
+DISTDIR_COPYING=$(shell ${DISTDIR_COPYING_CMD})
 
 distdir: $(DISTFILES)
-	$(call DISTDIR_PROCESS_IN_GROUPS,$(sort ${EDITED_DISTFILES}),10,DISTDIR_MKDIRS)
+	$(call DISTDIR_PROCESS_IN_GROUPS,${DISTDIR_DIRECTORY_LIST},10,DISTDIR_MKDIR)
 	$(call DISTDIR_PROCESS_IN_GROUPS,${EDITED_DISTFILES},10,DISTDIR_COPYING)
-	@echo done
+	@# this silent empty line mutes "nothing to be done" warning
